--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ logging.level.org.springframework.web=DEBUG
 
 server.port = 8080
 
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mirkodb
+spring.datasource.username=root
+spring.datasource.password=root
+
+flyway.baseline-on-migrate=true
+
+flyway.url: jdbc:mysql://localhost:3306/mirkodb
+flyway.user: root
+flyway.password: root
