--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <!--<artifactId>spring-web</artifactId>-->
       <!--<version>4.3.11.RELEASE</version>-->
     <!--</dependency>-->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+      </dependency>
   </dependencies>
 
   <build>
